--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ https://templatemo.com/tm-589-lugx-gaming
             <h2>Top Categories Website</h2>
           </div>
         </div>
-        <div class="col-lg col-sm-6 col-xs-12">
+    <!--    <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
             <h4>GPU</h4>
             <div class="thumb">
@@ -434,7 +434,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
     </div>
   </div>
-  <!--
+  
   <div class="section cta">
     <div class="container">
       <div class="row">
