Update index delete top catagory.html

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ https://templatemo.com/tm-589-lugx-gaming
       </div>
     </div>
   </div>
-
+ <!--
   <div class="section categories">
     <div class="container">
       <div class="row">
@@ -416,7 +416,7 @@ https://templatemo.com/tm-589-lugx-gaming
             <h2>Top Categories Website</h2>
           </div>
         </div>
-    <!--    <div class="col-lg col-sm-6 col-xs-12">
+       <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
             <h4>GPU</h4>
             <div class="thumb">
